Add optional SLACK_USER_TOKEN for reaction-on-thread-reply in channels (conversations.replies requires user token in public/private channels)
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,11 @@ DEEPL_API_KEY=your_deepl_api_key
 # Optional: for TRANSLATE_TRIGGER=reaction, only translate when this emoji is added to a message. Use shortcode without colons (e.g. de for :de:). Default de
 # REACTION_TRIGGER_EMOJI=de
 
+# Optional: for reaction-on-thread-reply in public/private channels. Slack only allows user tokens to
+# fetch thread replies in channels (bot token works in DMs only). Add User Token Scopes channels:history
+# (and groups:history for private channels) in OAuth & Permissions, reinstall the app, then set this
+# to the "User OAuth Token" (starts with xoxp-) from OAuth & Permissions.
+# SLACK_USER_TOKEN=xoxp-your-user-token
+
 # Optional: if the message contains any of these phrases, only the text *after* the phrase is translated (preamble skipped). Comma-separated. Default includes: Can you please assist us with a translation of the following:, Can you translate the following:, Please translate the below:, translation of the following:, the following:
 # EXTRACT_CONTENT_AFTER=Can you please assist us with a translation of the following:,Can you translate the following:,Please translate the below:,translation of the following:,the following:
